# Spine-Morphology-Analyzer

./: .gitmodules  README.md
SampleData/: L2.stl  L3.stl  L4.stl  L5.stl
SlicerPlugins/: CMakeLists.txt
SlicerPlugins/Dimensions/: CMakeLists.txt  Dimensions.py
SlicerPlugins/Dimensions/Resources/Scripts/: morphology.py  vtk_convenience.py
SlicerPlugins/Dimensions/Resources/UI/: Dimensions.ui
SlicerPlugins/SymmetryPlane/: SymmetryPlane.py
dataset/verse_annotated/: Readme.md  Verse009_T4 - ldepth.json  Verse009_T4 - lwidth.json  Verse009_T4 - udepth.json  Verse009_T4 - uwidth.json  Verse009_T5 - ldepth.json  Verse009_T5 - lwidth.json  Verse009_T5 - uwidth.json  Verse033_L3 - ldepth.json  Verse033_L3 - lwidth.json  Verse033_L3 - udepth.json  Verse033_L3 - uwidth.json  Verse033_T4 - ldepth.json  Verse033_T4 - lwidth.json  Verse033_T4 - udepth.json  Verse033_T4 - uwidth.json  Verse033_T5 - ldepth.json  Verse033_T5 - lwidth.json  Verse033_T5 - udepth.json  Verse033_T5 - uwidth.json  Verse034_T10 - ldepth.json  Verse034_T10 - lwidth.json  Verse034_T10 - uwidth.json  Verse034_T11 - ldepth.json  Verse034_T11 - lwidth.json  Verse034_T11 - udepth.json  Verse034_T11 - uwidth.json  Verse043_L3 - lwidth.json  Verse043_L3 - uwidth.json  Verse043_T4 - ldepth.json  Verse043_T5 - ldepth.json
dataset_generated_spines/Sample_ScalingFactor_0.8/: L1.stl  L3.mkp.json  L3.stl  L4.mkp.json  L4.stl  measurements.csv
dataset_generated_spines/Sample_ScalingFactor_0.8082/: L2.stl  L3.mkp.json  L3.stl  L4.mkp.json  L5.stl  (+1 more)
datasets/: Verse005_L1.stl  Verse005_L1_remeshed.stl
(+538 files in other folders)
